--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ html{
 }
 
 .firstSection{
-    background-image: url(/media/images/backgroundImage.jpg);
+    background-image: url(../media/images/backgroundImage.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: right;
@@ -352,7 +352,7 @@ html{
 /*/////////////////// Styles Contacto y algo de Reseñas /////////////*/
 
 .formSection{
-    background-image: url(/media/images/backgroundImage.jpg);
+    background-image: url(../media/images/backgroundImage.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: right;
