--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
     border-top-right-radius: 15px ;
     border-bottom-left-radius: 15px;
     box-shadow: 1px 1px 2px black;
-    z-index: 1;
+    z-index: 2;
 }
 
 .turnero a{
@@ -79,6 +79,11 @@ header ul li{
 .logo{
     line-height: 50px;
     margin-top: 2px;
+    transition: all 2s;
+}
+
+.logo:hover{
+    transform: scale(1.05);
 }
 
 .logo a{
@@ -94,7 +99,7 @@ header ul li{
     width: 100%;
     height: 25px;
     top: 0px;
-    z-index: 5;
+    z-index: 1;
 }
 
 .nav nav{
@@ -310,11 +315,14 @@ html{
     font-size: 25px;
     border-radius: 50%;
     box-shadow: 2px 2px 10px 3px black;
+    transition: all 0.5s ease-in-out;
 }
 
 .subir:hover{
     border: black solid 2px;
     box-shadow: 2px 2px 10px 3px white;
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 /*Styles Galeria*/
