--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,11 @@
     z-index: 2;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .turnero a{
     line-height: 15px;
 }
@@ -36,7 +41,6 @@
 }
 
 .headerTop{
-    width: 100%;
     height: 30px;
     overflow: hidden;
     background-color: #C0D6DF;
@@ -71,15 +75,14 @@ header ul li{
 .headerBottom{
     background-color: white;
     width: 100%;
-    height: 100px;
-    text-align: center;
+    height: 65px;
     padding: 10px;
 }
 
 .logo{
-    line-height: 50px;
     margin-top: 2px;
     transition: all 2s;
+    text-align: center;
 }
 
 .logo:hover{
@@ -87,39 +90,23 @@ header ul li{
 }
 
 .logo a{
+    line-height: 50px;
     font-family: sacramento;
     font-size: 50px;
     color: #C0D6DF;
     text-shadow: 1px 1px 2px black;
 }
 
-.nav{
-    margin-top: -40px;
-    position: sticky;
-    width: 100%;
-    height: 25px;
-    top: 0px;
-    z-index: 1;
+.navbar{
+    z-index: 1!important;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
-.nav nav{
-    background-color: rgba(260, 260, 260, .3);
+.navbar a:hover{
+    border-bottom: solid 2px black;
 }
-
-.nav ul{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    justify-items: center;
-}
-
-.nav li{
-    display: inline-block;
-    margin: 0px 15px;
-}
-
-.nav li:hover{
-    border-bottom: 2px solid black;
+.navbar li a{
+    line-height: 15px;
 }
 
 footer{
@@ -144,6 +131,7 @@ html{
     background-position: right;
     background-color: white;
     width: 100%;
+    margin-top: -20px;
     min-height: 500px;
     box-shadow:inset 0px 10px 10px 40px white;
     padding: 50px;
@@ -490,6 +478,10 @@ html{
         font-size: 15px;
     }
 
+    .navbar{
+        height: 30px;
+    }
+
     .firstSection{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -604,6 +596,10 @@ html{
 
     .headerTop{
         font-size: 15px;
+    }
+
+    .navbar{
+        height: 30px;
     }
 
     .firstSection{
