--- a/css/styles.css
+++ b/css/styles.css
@@ -40,78 +40,57 @@ a{
     box-shadow: -1px -1px 2px black;
 }
 
-.headerTop{
-    height: 30px;
-    overflow: hidden;
+a{
+    text-decoration: none;
+}
+
+.topHeader{
+    font-size: 1.1rem;
     background-color: #C0D6DF;
-    padding: 7px;
-    font-size: 0px;
-    display: flex;
-    justify-content: space-between;
 }
 
-.headerTop i{
-    font-size: 20px;
-}
-
-header ul li{
+#info, #redes{
     display: inline-block;
-    line-height: 15px;
+    width: auto;
 }
 
-.headerTop__list1{
-    margin-left: -30px;
-}
-
-.headerTop__list1 li{
-    margin-right: 5px;
-}
-
-.socialMedia li{
-    margin-left: 5px;
-}
-
-.headerTop i:hover, .headerTop a:hover{
-    color: white;
-}
-
-.headerBottom{
-    background-color: white;
-    width: 100%;
-    height: 65px;
-    padding: 10px;
-}
-
-.logo{
-    margin-top: 2px;
-    transition: all 2s;
-    text-align: center;
-}
-
-.logo:hover{
-    transform: scale(1.05);
+.topHeader i:hover, .topHeader span:hover{
+    color: white!important;
 }
 
 .logo a{
-    line-height: 50px;
     font-family: sacramento;
-    font-size: 50px;
+    font-size: 3rem;
+    margin-left: -20px;
     color: #C0D6DF;
     text-shadow: 1px 1px 2px black;
 }
 
 .navbar{
     z-index: 1!important;
-    background-color: rgba(255, 255, 255, 0.5);
     position: sticky;
     top: 30px;
+    margin-top: -90px;
+}
+
+.navbar-toggler{
+    background-color: #FFA5AB;
+    border: white solid 2px !important;
+    box-shadow: 2px 2px 10px 3px black;
+    margin-bottom: 5px;
 }
 
 .navbar a:hover{
-    border-bottom: solid 2px black;
+    text-decoration: underline black;
 }
+
 .navbar li a{
     line-height: 15px;
+    width: 100px;
+    text-align: end;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 3px;
+    z-index: 2;
 }
 
 footer{
@@ -490,6 +469,15 @@ html{
     .navbar{
         height: 30px;
         top: 0px;
+        margin-top: -20px;
+    }
+
+    .navbar li a{
+        line-height: 15px;
+        width: auto;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 2px;
     }
 
     .firstSection{
@@ -615,6 +603,15 @@ html{
     .navbar{
         height: 30px;
         top: 0px;
+        margin-top: -20px;
+    }
+
+    .navbar li a{
+        line-height: 15px;
+        width: auto;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 2px;
     }
 
     .firstSection{
