--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,14 @@ a{
 }
 
 .navbar-toggler{
+    width: 40px;
     background-color: #FFA5AB;
     border: white solid 2px !important;
     box-shadow: 2px 2px 10px 3px black;
     margin-bottom: 5px;
+}
+.navbar-toggler-icon{
+    margin-left: -8px;
 }
 
 .navbar a:hover{
