--- a/css/styles.css
+++ b/css/styles.css
@@ -501,6 +501,7 @@ html{
     }
 
     .navbar{
+        position: static;
         height: 30px;
         top: 0px;
         margin-top: -20px;
@@ -644,6 +645,7 @@ html{
     }
 
     .navbar{
+        position: static;
         height: 30px;
         top: 0px;
         margin-top: -20px;
