--- a/css/styles.css
+++ b/css/styles.css
@@ -108,10 +108,6 @@ footer li a{
     color: white;
 }
 
-.align-responsive{
-    margin-top: 100px;
-}
-
 /*INDEX STYLES*/
     /*FIRST SECTION INDEX*/
 html{
@@ -310,16 +306,8 @@ html{
 /*Styles Galeria*/
 
 .contenedorFotos{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(8, auto);
-    grid-gap: 10px;
-    box-shadow:inset 0px 10px 10px 40px white;
-    background-color: #C0D6DF;
-    padding: 50px;
-    padding-top: 100px;
+    display: none;
+    visibility: hidden;
 }
 
 .foto{
@@ -337,6 +325,12 @@ html{
     transition: all 0.3s;
     border: black solid 3px;
     box-shadow: 0px 0px 10px 5px white;
+}
+
+.carousel-item{
+    border: 2px solid #320E3B;
+    border-radius: 5px;
+    margin-top: 25px;
 }
 
 /***** Styles BLOG ******/
@@ -501,7 +495,6 @@ html{
     }
 
     .navbar{
-        position: static;
         height: 30px;
         top: 0px;
         margin-top: -20px;
@@ -513,10 +506,6 @@ html{
         text-align: center;
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 2px;
-    }
-
-    .align-responsive{
-        margin-top: 0;
     }
 
     .firstSection{
@@ -570,6 +559,14 @@ html{
     }
 
     .contenedorFotos{
+        width: 100%;
+        display: grid;
+        grid-gap: 10px;
+        box-shadow:inset 0px 10px 10px 40px white;
+        background-color: #C0D6DF;
+        padding: 50px;
+        padding-top: 75px;
+        visibility: visible;
         height: auto;
         grid-template-columns: repeat(3, auto);
         grid-template-rows: repeat(3, auto);
@@ -645,7 +642,6 @@ html{
     }
 
     .navbar{
-        position: static;
         height: 30px;
         top: 0px;
         margin-top: -20px;
@@ -658,11 +654,6 @@ html{
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 2px;
     }
-
-    .align-responsive{
-        margin-top: 0;
-    }
-
 
     .firstSection{
         display: flex;
@@ -705,6 +696,14 @@ html{
     }
 
     .contenedorFotos{
+        width: 100%;
+        display: grid;
+        grid-gap: 10px;
+        box-shadow:inset 0px 10px 10px 40px white;
+        background-color: #C0D6DF;
+        padding: 50px;
+        padding-top: 75px;
+        visibility: visible;
         height: auto;
         grid-template-columns: repeat(4, auto);
         grid-template-rows: repeat(3, 32%);
