galeria bootstrap - bugs fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,7 @@ html{
 .foto{
     width: auto;
     height: auto;
-    border: #FFA5AB solid 2px;
+    border: #320E3B solid 2px;
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.3s;
