Animaciones agregadas al boton de turnero - Animaciones AOS agregadas en algunos lugares

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@
     text-decoration: none;
 }
 
+p{
+    max-width: 75ch;
+}
+
 .turnero{
     width: 40px;
     height: 40px;
@@ -24,8 +28,35 @@
     border-bottom-left-radius: 15px;
     box-shadow: 1px 1px 2px black;
     z-index: 2;
+    animation: shake-horizontal 4s;
+    animation-iteration-count: infinite;
+    animation-delay: 2s;
 }
-
+/* ANIMACION TURNERO */
+@keyframes shake-horizontal {
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+    10%,
+    30%,
+    50%,
+    70% {
+      transform: translateX(-6px);
+    }
+    20%,
+    40%,
+    60% {
+      transform: translateX(6px);
+    }
+    80% {
+      transform: translateX(4px);
+    }
+    90% {
+      transform: translateX(-4px);
+    }
+  }
+  
 a{
     text-decoration: none;
     color: black;
