--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,16 @@ a {
   color: white !important;
 }
 
-.logo a {
+.logo a h1 {
   font-family: sacramento;
   font-size: 3rem;
   margin-left: -20px;
   color: #C0D6DF;
   text-shadow: 1px 1px 2px black;
+  transition: all 1s;
+}
+.logo a h1:hover {
+  transform: scale(1.05);
 }
 
 .navbar {
