--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,5 +1,10 @@
 $primary-color: #cbe3ec;
 $secondary-color: #FFA5AB;
 $third-color: #320E3B;
+$palette: (
+    'primary': #cbe3ec,
+    'secondary': #FFA5AB,
+    'third': #320E3B
+);
 $primary-font: montserrat;
 $title-font: sacramento;
