Services sections changed and real data added

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,6 +209,9 @@ footer{
         margin-top: 20px;
         @include boxes;
     }
+    .secondSection__boxes--map{
+        padding: 0px;
+    }
 }
 
 .coments:hover{
@@ -228,10 +231,6 @@ footer{
     align-content: center;
 }
 
-.services ul{
-    list-style: none;
-}
-
 .titulos{
     font-family: $title-font;
     font-size: 70px;
@@ -241,40 +240,88 @@ footer{
     margin-bottom: -90px;
 }
 
-.galeriaEspecializaciones{
-    height: 300px;
+.l-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
     width: 100%;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.galeriaFotos{
-    display: inline-block;
-    width: 250px;
-    height: 120px;
-    margin-top: 20px;
-}
-
-.servicesBoxes
-{
+    max-width: 1200px;
+    padding: 30px;
+  }
+  
+  .b-game-card {
+    position: relative;
+    z-index: 1;
     width: 100%;
-    text-align: center;
-}
-
-.ubicationMap{
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    border: solid 2px map-get($map: $palette, $key: 'primary');
-}
-
-.obrasSociales{
-    height: 500px;
-}
+    padding-bottom: 150%;
+    perspective: 1000px;
+    
+    &__cover {
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+      background-size: cover;
+      perspective-origin: 50% 50%;
+      transform-style: preserve-3d;
+      transform-origin: top center;
+      will-change: transform;
+      transform: skewX(.001deg);
+      transition: transform .35s ease-in-out;
+      
+      &::after {
+        display: block;
+        content: '';
+        position: absolute;
+        z-index: 100;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 120%;
+        background: linear-gradient(226deg, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.4) 35%, rgba(255,255,255,0.2) 42%, rgba(255,255,255,0) 60%);
+        transform: translateY(-20%);
+        will-change: transform;
+        transition: transform .65s cubic-bezier(0.18, 0.9, 0.58, 1);
+      }
+      
+    }
+    
+    &:hover &__cover {
+      transform: rotateX(7deg) translateY(-6px);
+  
+      &::after {
+        transform: translateY(0%);
+      }
+      
+    }
+    
+    &::before {
+      display: block;
+      content: '';
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      width: 90%;
+      height: 90%;
+      background: rgba($c_0, 0.5);
+      box-shadow: 0 6px 12px 12px rgba($c_0, 0.4);
+      will-change: opacity;
+      transform-origin: top center;
+      transform: skewX(.001deg);
+      transition: transform .35s ease-in-out, opacity .5s ease-in-out;
+    }
+    
+    &:hover::before {
+      opacity: 0.6;
+      transform: rotateX(7deg) translateY(-6px) scale(1.05);
+    }
+    
+    
+  }
 
 .sobreMi__article{
     display: flex;
@@ -544,17 +591,8 @@ footer{
         padding: 40px;
     }
 
-    .galeriaEspecializaciones{
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        margin-top: -80px;
-    }
-
-    .galeriaFotos{
-        margin-left: 50px;
-        margin-bottom: -80px;
+    .l-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .ubicationMap{
@@ -699,9 +737,10 @@ footer{
         padding: 40px;
     }
 
-    .services{
-        display: flex;
-        flex-flow:row nowrap ;
+    .l-container {
+        grid-template-columns: repeat(4, 20vw);
+        align-self: center;
+        justify-content: center;
     }
 
     .sobreMi__secondArticle{
