--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,9 @@ footer li a {
   box-shadow: inset 0px 0px 10px 4px white;
   text-align: center;
 }
+.secondSection .secondSection__boxes--map {
+  padding: 0px;
+}
 
 .coments:hover {
   border: solid black 2px;
@@ -226,10 +229,6 @@ footer li a {
   align-content: center;
 }
 
-.services ul {
-  list-style: none;
-}
-
 .titulos {
   font-family: sacramento;
   font-size: 70px;
@@ -239,38 +238,77 @@ footer li a {
   margin-bottom: -90px;
 }
 
-.galeriaEspecializaciones {
-  height: 300px;
+.l-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 30px;
   width: 100%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
+  max-width: 1200px;
+  padding: 30px;
 }
 
-.galeriaFotos {
-  display: inline-block;
-  width: 250px;
-  height: 120px;
-  margin-top: 20px;
-}
-
-.servicesBoxes {
+.b-game-card {
+  position: relative;
+  z-index: 1;
   width: 100%;
-  text-align: center;
+  padding-bottom: 150%;
+  perspective: 1000px;
 }
-
-.ubicationMap {
+.b-game-card__cover {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
-  border: solid 2px #cbe3ec;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background-size: cover;
+  perspective-origin: 50% 50%;
+  transform-style: preserve-3d;
+  transform-origin: top center;
+  will-change: transform;
+  transform: skewX(0.001deg);
+  transition: transform 0.35s ease-in-out;
 }
-
-.obrasSociales {
-  height: 500px;
+.b-game-card__cover::after {
+  display: block;
+  content: "";
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120%;
+  background: linear-gradient(226deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.4) 35%, rgba(255, 255, 255, 0.2) 42%, rgba(255, 255, 255, 0) 60%);
+  transform: translateY(-20%);
+  will-change: transform;
+  transition: transform 0.65s cubic-bezier(0.18, 0.9, 0.58, 1);
+}
+.b-game-card:hover .b-game-card__cover {
+  transform: rotateX(7deg) translateY(-6px);
+}
+.b-game-card:hover .b-game-card__cover::after {
+  transform: translateY(0%);
+}
+.b-game-card::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 6px 12px 12px rgba(0, 0, 0, 0.4);
+  will-change: opacity;
+  transform-origin: top center;
+  transform: skewX(0.001deg);
+  transition: transform 0.35s ease-in-out, opacity 0.5s ease-in-out;
+}
+.b-game-card:hover::before {
+  opacity: 0.6;
+  transform: rotateX(7deg) translateY(-6px) scale(1.05);
 }
 
 .sobreMi__article {
@@ -479,7 +517,6 @@ footer li a {
   .firstSection__media {
     width: 100%;
   }
-
   .firstSection__person {
     width: 80%;
   }
@@ -489,26 +526,21 @@ footer li a {
     overflow: visible;
     width: auto;
   }
-
   .turnero span {
     color: white;
   }
-
   .headerTop {
     font-size: 15px;
   }
-
   .headerTop__list1 li {
     margin-right: 20px;
   }
-
   .navbar {
     position: static;
     height: 30px;
     top: 0px;
     margin-top: -20px;
   }
-
   .navbar li a {
     line-height: 15px;
     width: auto;
@@ -516,27 +548,22 @@ footer li a {
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 2px;
   }
-
   .align-responsive {
     margin-top: 0;
   }
-
   .firstSection {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
-
   .firstSection__media {
     width: 100%;
     grid-area: 1/1/2/3;
   }
-
   .firstSection__person {
     width: 100%;
     order: -1;
   }
-
   .secondSection {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -544,33 +571,20 @@ footer li a {
     margin-top: 0;
     padding: 40px;
   }
-
-  .galeriaEspecializaciones {
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    margin-top: -80px;
+  .l-container {
+    grid-template-columns: repeat(2, 1fr);
   }
-
-  .galeriaFotos {
-    margin-left: 50px;
-    margin-bottom: -80px;
-  }
-
   .ubicationMap {
     width: 80%;
     justify-self: center;
     margin-left: auto;
     margin-right: auto;
   }
-
   .sobreMi__secondArticle {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
   }
-
   .contenedorFotos {
     width: 100%;
     display: grid;
@@ -585,48 +599,37 @@ footer li a {
     grid-template-rows: repeat(3, auto);
     grid-template-areas: "f1 f2 f3 " "f4 f5 f7 " "f8 f6 f6 ";
   }
-
   .foto1 {
     grid-area: f1;
   }
-
   .foto2 {
     grid-area: f2;
   }
-
   .foto3 {
     grid-area: f3;
   }
-
   .foto4 {
     grid-area: f4;
   }
-
   .foto5 {
     grid-area: f5;
   }
-
   .foto6 {
     grid-area: f6;
   }
-
   .foto7 {
     grid-area: f7;
   }
-
   .foto8 {
     grid-area: f8;
   }
-
   #blogLink {
     margin: 5px 10px;
     width: 30%;
   }
-
   .asideContacto {
     width: 70%;
   }
-
   .resenasPersonas {
     display: flex;
     flex-flow: row wrap;
@@ -634,7 +637,6 @@ footer li a {
     align-items: center;
     margin-top: 50px;
   }
-
   .boxCritica {
     width: 22%;
     min-height: 190px;
@@ -645,26 +647,21 @@ footer li a {
     overflow: visible;
     width: auto;
   }
-
   .turnero span {
     color: white;
   }
-
   .headerTop {
     font-size: 15px;
   }
-
   .headerTop__list1 li {
     margin-right: 20px;
   }
-
   .navbar {
     position: static;
     height: 30px;
     top: 0px;
     margin-top: -20px;
   }
-
   .navbar li a {
     line-height: 15px;
     width: auto;
@@ -672,48 +669,40 @@ footer li a {
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 2px;
   }
-
   .align-responsive {
     margin-top: 0;
   }
-
   .firstSection {
     display: flex;
     flex-direction: row;
   }
-
   .firstSection__media {
     width: 50%;
     order: 1;
   }
-
   .firstSection__person {
     width: 30%;
     order: 2;
   }
-
   .firstSection__description {
     order: 3;
     width: 30%;
   }
-
   .secondSection {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 0;
     padding: 40px;
   }
-
-  .services {
-    display: flex;
-    flex-flow: row nowrap;
+  .l-container {
+    grid-template-columns: repeat(4, 20vw);
+    align-self: center;
+    justify-content: center;
   }
-
   .sobreMi__secondArticle {
     width: 20%;
     align-self: center;
   }
-
   .contenedorFotos {
     width: 100%;
     display: grid;
@@ -728,64 +717,50 @@ footer li a {
     grid-template-rows: repeat(3, 32%);
     grid-template-areas: "f1 f2 f2 f3" "f4 f2 f2 f5" "f4 f6 f7 f8";
   }
-
   .foto1 {
     grid-area: f1;
   }
-
   .foto2 {
     grid-area: f2;
   }
-
   .foto3 {
     grid-area: f3;
   }
-
   .foto4 {
     grid-area: f4;
   }
-
   .foto5 {
     grid-area: f5;
   }
-
   .foto6 {
     grid-area: f6;
   }
-
   .foto7 {
     grid-area: f7;
   }
-
   .foto8 {
     grid-area: f8;
   }
-
   #blogLink {
     margin: 5px 10px;
     width: 23%;
   }
-
   #blogsImage {
     width: 50%;
     height: auto;
     margin: auto;
   }
-
   .formSection {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-
   .asideContacto {
     width: 80%;
   }
-
   .formDescription {
     align-self: center;
     width: 80%;
   }
-
   .resenasPersonas {
     display: flex;
     flex-flow: row wrap;
@@ -793,7 +768,6 @@ footer li a {
     align-items: center;
     margin-top: 50px;
   }
-
   .boxCritica {
     width: 22%;
     min-height: 190px;
