--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,6 @@
+$primary-color: #cbe3ec;
+$secondary-color: #FFA5AB;
+$third-color: #320E3B;
 $palette: (
     'primary': #cbe3ec,
     'secondary': #FFA5AB,
