--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,14 +88,11 @@ a{
         color: #C0D6DF;
         text-shadow: 1px 1px 2px black;
         transition: all 1s;
-        &:hover{
-            transform: scale(1.05);
-        }
     }
 }
 
 .navbar{
-    z-index: 1!important;
+    z-index: 2!important;
     position: sticky;
     top: 30px;
     margin-top: -90px;
@@ -220,7 +217,7 @@ footer{
 }
 
 .sections{
-    width: 100%;
+    width: 100vw;
     height: auto;
     background-color: map-get($map: $palette, $key: 'primary');
     box-shadow:inset 0px 10px 10px 40px white;
@@ -240,9 +237,15 @@ footer{
     margin-bottom: -90px;
 }
 
+.services{
+    padding: 50px 0px !important;
+    width: 100vw!important;
+    overflow: hidden!important;
+}
+
 .l-container {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 80vw);
     grid-gap: 30px;
     width: 100%;
     max-width: 1200px;
@@ -350,6 +353,7 @@ footer{
 }
 
 .subir{
+    z-index: 2;
     height: 50px;
     width: 50px;
     position: fixed;
