--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,11 @@
     text-decoration: none;
 }
 
+body{
+    width: 100vw;
+    overflow-x: hidden !important;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -244,6 +249,9 @@ footer{
 }
 
 .l-container {
+    align-self: center;
+    justify-self: center;
+    margin-left: 20px;
     display: grid;
     grid-template-columns: repeat(1, 80vw);
     grid-gap: 30px;
@@ -253,7 +261,7 @@ footer{
   }
   
   .b-game-card {
-    position: relative;
+    justify-self: center;
     z-index: 1;
     width: 100%;
     padding-bottom: 150%;
@@ -373,13 +381,16 @@ footer{
 }
 
 /*----------Styles Galeria----------*/
+.galerySection{
+    padding: 0px!important;
+}
 
 .contenedorFotos{
-    display: none;
-    visibility: hidden;
+    padding: 20px;
 }
 
 .foto{
+    margin-top: 20px;
     width: auto;
     height: auto;
     border: map-get($map: $palette, $key: 'third') solid 2px;
@@ -578,7 +589,7 @@ footer{
     }
 
     .firstSection__media{
-        width: 100%;
+        width: 100%!important;
         grid-area: 1/1/2/3;
     }
     
@@ -597,6 +608,7 @@ footer{
 
     .l-container {
         grid-template-columns: repeat(2, 1fr);
+        margin-left: 0px;
     }
 
     .ubicationMap{
@@ -627,6 +639,10 @@ footer{
         grid-template-areas: "f1 f2 f3 "
                              "f4 f5 f7 "
                              "f8 f6 f6 ";
+    }
+
+    .foto{
+        margin-top: 0px;
     }
     
     .foto1{
@@ -745,6 +761,7 @@ footer{
         grid-template-columns: repeat(4, 20vw);
         align-self: center;
         justify-content: center;
+        margin-left: 0px;
     }
 
     .sobreMi__secondArticle{
@@ -767,6 +784,10 @@ footer{
         grid-template-areas: "f1 f2 f2 f3"
                              "f4 f2 f2 f5"
                              "f4 f6 f7 f8";
+    }
+
+    .foto{
+        margin-top: 0px;
     }
 
     .foto1{
